@@ -1,2 +1,2 @@
 {'../../ejabberd-dev/trunk/src/gen_mod', [{outdir, "../../ejabberd-dev/trunk/ebin"},{i,"../../ejabberd-dev/trunk/include"}]}.
-{'src/mod_muc_log_http',     [{outdir, "ebin"},{i,"../../ejabberd-dev/trunk/include"}]}.
+{'src/mod_muc_log_http',     [{d,'SSL39'},{outdir, "ebin"},{i,"../../ejabberd-dev/trunk/include"}]}.
